<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    app:cardElevation="5dp"
    app:strokeColor="?colorText"
    app:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorOnPrimary"
        android:paddingVertical="5dp">

        <ImageView
            android:id="@+id/blindIcon"
            style="@style/iconSize"
            android:layout_alignTop="@+id/scheduleName"
            android:layout_alignBottom="@+id/controlSlider"
            android:layout_marginHorizontal="10dp"
            app:srcCompat="@drawable/ic_tv"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/scheduleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/blindIcon"
            android:text="Name of motor"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <com.helio.app.ui.utils.LevelSlider
            android:id="@+id/controlSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scheduleName"
            android:layout_toEndOf="@+id/blindIcon" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>