<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.blinds.SingleBlindSettingsPreferencesFragment">

    <EditTextPreference
        android:key="ip"
        android:title="@string/ip_address"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="name"
        android:title="@string/component_name"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:entries="@array/icons"
        android:entryValues="@array/iconsValues"
        android:key="icon"
        android:title="@string/blinds_icon"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="seeSchedule"
        android:title="@string/settingsViewSchedules" />

    <Preference
        android:key="sensors"
        android:title="@string/settingsViewSensors" />

    <Preference
        android:key="calibration"
        android:title="@string/settingsCalibration" />

    <Preference
        android:key="motionSensor"
        android:title="Motion sensor settings"/>

    <Preference
        android:key="lightSensor"
        android:title="Light sensor settings"/>



</PreferenceScreen>