<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/add_component_hint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables"> <!-- so we can adjust ImageView size -->
        <ImageView
            android:id="@+id/add_component_hint_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            android:background="@drawable/ic_add"
            android:contentDescription="@string/add_new_sensor_button"
            android:backgroundTint="?colorTextSubtle"/>
        <TextView
            android:id="@+id/add_component_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/add_new_sensor_button"
            android:textSize="36sp"
            android:textColor="?colorTextSubtle"
            android:textStyle="bold"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sensorsRCView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/add_sensor_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"

        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/new_motion_sensor"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/ic_motion_sensor"
            app:tint="@color/white" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_light_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/new_light_sensor"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/ic_light_sensor"
            app:tint="@color/white" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_new_sensor_button"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />
</RelativeLayout>
