...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_address"
            style="@style/ipBoxLayout"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText style="@style/ipBoxText" />

...
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/blindsRCView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>
