...
            android:paddingVertical="0dp"
            android:text="Name of motor"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
